--- a/index.html
+++ b/index.html
@@ -6,55 +6,60 @@
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatbible" content="IE=edge">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- code a Hero / Banner section -->
-  <div class="banner"  style="background-image: url(images/background.png);">
+  <div class="banner"  style="background-image: url(images/elizeu-dias-RN6ts8IZ4_0-unsplash.jpg);">
     <div class="container">
-      <h1>Le Wagon brings tech skills to creative people</h1>
-      <p>Add spice in your life and learn to code at one of our campuses around the world.</p>
-      <a href="https://www.lewagon.com/" class="btn-banner" alt="Le Wagon" target="_blank">Apply now!</a>
+      <h1>What Can You Do at the Beach?😎 </h1>
+      <p>
+        If you think that spending time at the beach is limited to just swimming, there's a lot more that
+        you're missing out on! Here are some of the most fun things that you can do at the beach besides just going swimming
+      </p>
+      <a href="#" class="btn-banner" alt="Beach" target="_blank">Register here</a>
     </div>
   </div>
 
   <!-- code a "How it works" section -->
   <div class="container">
-    <h2 class="center">How it works</h2>
+    <h2 class="center">What to do...</h2>
     <div class="cards">
       <div class="card">
-        <img src="images/apply.svg" alt="Apply">
-        <h3>Apply</h3>
-        <p>Lorem ipsum dolor sit amet</p>
+        <img src="images/dolphin-3321762.svg" alt="dolphin">
+        <h3>Look for Dolphins</h3>
+        <p>If you know what you're looking for and when to look.😅</p>
       </div>
       <div class="card">
-        <img src="images/learn.svg" alt="Learn">
-        <h3>Learn to code</h3>
-        <p>Lorem ipsum dolor sit amet</p>
+        <img src="images/temp1.svg" alt="topless">
+        <h3>Go Topless</h3>
+        <p>Of course, you have to make sure that you're doing this at a nude beach. 😅</p>
       </div>
       <div class="card">
-        <img src="images/product.svg" alt="product">
-        <h3>Build products</h3>
-        <p>Lorem ipsum dolor sit amet</p>
+        <img src="images/1533757799.svg" alt="daydream">
+        <h3>Daydream</h3>
+        <p>Imagine you would do if you won the lottery.🤪</p>
       </div>
     </div>
-    <div class="footer">
-      <ul>
-        <li><a href="https://www.facebook.com/lewagontokyo/?brand_redir=116941945171079" target="_blank">
+  </div>
+  <div class="footer">
+    <ul>
+      <li><a href="https://www.facebook.com/lewagontokyo/?brand_redir=116941945171079" target="_blank">
           <i class="fab fa-facebook"></i>
         </a></li>
-        <li><a href="https://github.com/lewagon" target="_blank">
+      <li><a href="https://github.com/lewagon" target="_blank">
           <i class="fab fa-github"></i>
-        </a</li>
-        <li><a href="https://twitter.com/LeWagonTokyo?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
+          </a</li>
+      <li><a href="https://twitter.com/LeWagonTokyo?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+          target="_blank">
           <i class="fab fa-twitter"></i>
-        </a</li>
-        <li><a href="https://www.instagram.com/lewagontokyo/?hl=en" target="_blank">
+          </a</li>
+      <li><a href="https://www.instagram.com/lewagontokyo/?hl=en" target="_blank">
           <i class="fab fa-instagram"></i>
-        </a</li>
-      </ul>
-      <p>This website was coded with ❤️ at Le Wagon.</p>
-    </div>
+          </a</li>
+    </ul>
+    <p>This website was coded with ❤️ at Le Wagon.</p>
   </div>
 
 </body>
